# pyflct

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .rtd-environment.yml  .sunpy-template.yml  CHANGELOG.rst  LICENSE.rst  MANIFEST.in  README.rst  azure-pipelines.yml  pyflct-env.yml  pyproject.toml  readthedocs.yml  rtd-environment.yml  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: ci.yml
cextern/: COPYRIGHT  flctsubs.c  flctsubs.h
changelog/: 1.feature.rst  74.breaking.2.rst  74.breaking.rst  74.feature.1.rst  74.feature.rst
docs/: conf.py  flct.rst  index.rst  install.rst  pyflct.rst
examples/: README.txt  io_dat_files.py  running_flct.py
pyflct/: __init__.py  flct.py  flct.pyx  pyflct.pyx  setup_package.py  sunkit.c  sunkit.h  utils.py  version.py
pyflct/data/test/: __init__.py
pyflct/tests/: test_flct.py  test_utils.py
src/pyflct/: __init__.py  flct.py  setup_package.py  sunkit.h
src/pyflct/tests/: test_flct.py
