[metadata]
name = pyflct
author = The SunPy Developers
author_email = sunpy@googlegroups.com
license = GNU GPL v3+
license_file = LICENSE.rst
url = https://sunpy.org
description = A Python wrapper for Fourier Local Correlation Tracking.
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires = sunpy



[options.extras_require]
test =
    pytest
    pytest-astropy
    pytest-cov
docs =
    sphinx
    sphinx-automodapi
    towncrier

    sunpy-sphinx-theme


[options.package_data]
pyflct = data/*

[tool:pytest]
testpaths = "pyflct" "docs"
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
  pyflct/_sunpy_init*
  pyflct/conftest.py
  pyflct/*setup_package*
  pyflct/tests/*
  pyflct/*/tests/*
  pyflct/extern/*
  pyflct/version*
  */pyflct/_sunpy_init*
  */pyflct/conftest.py
  */pyflct/*setup_package*
  */pyflct/tests/*
  */pyflct/*/tests/*
  */pyflct/extern/*
  */pyflct/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
