[metadata]
name = pyflct
author = The SunPy Developers
author_email = sunpy@googlegroups.com
license = LGPLv2+
license_file = LICENSE.rst
url = https://docs.sunpy.org/projects/pyflct/
description = A Python wrapper for Fourier Local Correlation Tracking.
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Science/Research
  License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
  Natural Language :: English
  Operating System :: MacOS
  Operating System :: POSIX :: Linux
  Operating System :: Microsoft :: Windows :: Windows 10
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
  Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
include_package_data = true
packages=find:
python_requires = >=3.8
setup_requires =
  cython
  setuptools_scm
install_requires =
  numpy

[options.extras_require]
test =
  pytest
  pytest-cov
docs =
  matplotlib
  sphinx
  sphinx-automodapi
  sphinx-changelog
  sphinx-gallery
  sunpy-sphinx-theme

[options.packages.find]
exclude = pyflct._dev

[options.package_data]
pyflct = data/*

[tool:pytest]
testpaths = "pyflct" "docs"
norecursedirs = ".tox" ".eggs" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info" "examples" ".history" "pyflct[\/]_dev"

[pycodestyle]
max_line_length = 110

[flake8]
max-line-length = 110

[isort]
balanced_wrapping = True
skip=docs/conf.py
default_section = THIRDPARTY
include_trailing_comma = True
known_astropy = astropy, asdf, sunpy
known_first_party = pyflct
length_sort = False
length_sort_sections=stdlib
line_length = 110
multi_line_output = 3
no_lines_before = LOCALFOLDER
sections = STDLIB, THIRDPARTY, ASTROPY, FIRSTPARTY, LOCALFOLDER

[coverage:run]
omit =
  pyflct/_sunpy_init*
  pyflct/conftest.py
  pyflct/*setup_package*
  pyflct/tests/*
  pyflct/*/tests/*
  pyflct/extern/*
  pyflct/version*
  */pyflct/_sunpy_init*
  */pyflct/conftest.py
  */pyflct/*setup_package*
  */pyflct/tests/*
  */pyflct/*/tests/*
  */pyflct/extern/*
  */pyflct/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
